--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h3>am yours💝!!</h3>
         <h1>then</h1>
         <h1>Will you be my Valentine irfu💙?</h1>
-        <img src="images/cat.jpg" alt="meow meow" class="cat-image">
+        <img src=" https://github.com/DilshanaIrfan/valentinegift/blob/main/cat.jpg?raw=true" alt="meow meow" class="cat-image">
         <div class="button-container">
             <button onclick="goToPage('no')" class="no-button">No</button>
             <button onclick="goToPage('yes')" class="yes-button">Yes</button>
