--- a/memories.html
+++ b/memories.html
@@ -16,7 +16,7 @@
     <!-- Heart-Shaped Photo Collage -->
     <div class="heart-collage">
         <img src="https://github.com/DilshanaIrfan/valentinegift/blob/main/bum.jpg?raw=true" class="memory-image">
-        <img src="images/ddddd.jpg" class="memory-image">
+        <img src="https://github.com/DilshanaIrfan/valentinegift/blob/main/ddddd.jpg?raw=true" class="memory-image">
         <img src="images/eeeee.jpg" class="memory-image">
         <img src="images/siiiii.jpg" class="memory-image">
         <img src="images/we.jpg" class="memory-image">
