--- a/memories.html
+++ b/memories.html
@@ -18,7 +18,7 @@
         <img src="https://github.com/DilshanaIrfan/valentinegift/blob/main/bum.jpg?raw=true" class="memory-image">
         <img src="https://github.com/DilshanaIrfan/valentinegift/blob/main/ddddd.jpg?raw=true" class="memory-image">
         <img src="https://github.com/DilshanaIrfan/valentinegift/blob/main/eeeee.jpg?raw=true" class="memory-image">
-        <img src="images/siiiii.jpg" class="memory-image">
+        <img src="https://github.com/DilshanaIrfan/valentinegift/blob/main/siiiii.jpg?raw=true" class="memory-image">
         <img src="images/we.jpg" class="memory-image">
         <img src="images/zzzz.jpg" class="memory-image">
         <img src="images/kkkkk.jpg"class="memory-image">
