--- a/memories.html
+++ b/memories.html
@@ -20,7 +20,7 @@
         <img src="https://github.com/DilshanaIrfan/valentinegift/blob/main/eeeee.jpg?raw=true" class="memory-image">
         <img src="https://github.com/DilshanaIrfan/valentinegift/blob/main/siiiii.jpg?raw=true" class="memory-image">
         <img src="https://github.com/DilshanaIrfan/valentinegift/blob/main/we.jpg?raw=true" class="memory-image">
-        <img src="images/zzzz.jpg" class="memory-image">
+        <img src="https://github.com/DilshanaIrfan/valentinegift/blob/main/zzzz.jpg?raw=true" class="memory-image">
         <img src="images/kkkkk.jpg"class="memory-image">
         <img src="images/llllll.jpg" class="memory-image">
     </div>
