--- a/memories.html
+++ b/memories.html
@@ -22,7 +22,7 @@
         <img src="https://github.com/DilshanaIrfan/valentinegift/blob/main/we.jpg?raw=true" class="memory-image">
         <img src="https://github.com/DilshanaIrfan/valentinegift/blob/main/zzzz.jpg?raw=true" class="memory-image">
         <img src="https://github.com/DilshanaIrfan/valentinegift/blob/main/kkkkk.jpg?raw=true"class="memory-image">
-        <img src="images/llllll.jpg" class="memory-image">
+        <img src="https://github.com/DilshanaIrfan/valentinegift/blob/main/llllll.jpg?raw=true" class="memory-image">
     </div>
     <a href="yes.html" class="go-back-button">Go Back</a>
 
